<resources>
    <string name="app_name">WebSite Manager</string>
    <string name="app_daily_quote">“Do not wait until the conditions are perfect to begin. Beginning makes the conditions perfect.”</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">USER NAME</string>
    <string name="nav_header_subtitle">EmailAdress@abc.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="LoginPageHeading">Login</string>
    <string name="Email_ID">Enter Email Address</string>
    <string name="PasswordloginPage">Enter Password</string>
    <string name="agree_terms_and_condition">Agree Terms And Conditions</string>
    <string name="Go_to_signup">New User? Want to Register?</string>
    <string name="login_now">Login Now</string>
    <string name="Signup">Registration</string>
    <string name="Username">Enter Your Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_me">ADD ME</string>
    <string name="Go_to_login">Existing User?</string>
    <string name="menu_templates">Templates</string>
    <string name="menu_colour">Colors</string>
    <string name="menu_font">Fonts</string>
    <string name="menu_finish">Finish Creation</string>
    <string name="Step1">Step 1 of 5</string>
    <string name="give_your_website_name">Your Web Site Name</string>
    <string name="next">Next</string>
    <string name="scrollview">ScrollView</string>
    <string name="ThemeImg">ThemeImg</string>
    <string name="Template1">Theme 1 </string>
    <string name="Template2">Theme 2</string>
    <string name="Template3">Theme 3</string>
    <string name="Template4">Theme 4</string>
    <string name="Template5">Theme 5</string>
    <string name="Template6">Theme 6</string>
    <string name="Template7">Theme 7</string>
    <string name="Template8">Theme 8</string>
    <string name="Template9">Theme 9</string>
    <string name="Template10">Theme 10</string>
    <string name="Template11">Theme 11</string>
    <string name="Template12">Theme 12</string>
    <string name="Template13">Theme 13</string>
    <string name="Template14">Theme 14</string>
    <string name="Template15">Theme 15</string>
    <string name="Template16">Morning_glory</string>
    <string name="Template17">Burgundy</string>
    <string name="Template18">Frank_blue</string>
    <string name="Template19">Blue_chip</string>
    <string name="Template20">Loyal_blue</string>
    <string name="Template21">Heartthrob</string>
    <string name="Template22">Foxy</string>
    <string name="Template23">Ceremoniad_gold</string>
    <string name="Template24">Tulip_pink</string>
    <string name="Template25">Crushed_cumin</string>
    <string name="Template26">Aged_pine</string>
    <string name="Template27">Peach_echo</string>
    <string name="Template28">Fiesta</string>
    <string name="box">box!</string>
    <string name="images">images</string>
    <string name="previousbtnstring">Previous Step</string>
    <string name="Step2">Step 2 of 5</string>
    <string name="openDrawer">Open drawer layout</string>
    <string name="closeDrawer">close drawer layout</string>
    <string name="would_you_like_to_set_background_color_of_your_website">Would you like to set Background Color of your website?</string>
    <string name="colorOption">Choose Color</string>
    <string name="pick_color">Select Color</string>
    <string name="title_activity_create_website">CreateWebsite</string>

    <string name="menu_webpage">Select Theme</string>
    <string name="menu_change_background_color">Select </string>
    <string name="menu_new_fontstyle">Select FontStyles</string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="HorizontalView">HORIZONTALview</string>
    <string name="customlayoutstring">customlayoutstringvalue</string>
    <string name="menu_OverView">SETTING</string>
    <string-array name="Font_Family">
        <item>Select Heading Font</item>
        <item>acme</item>
        <item>alegreya_sc</item>
        <item>alfa_slab_one</item>
        <item>almendra_display</item>
        <item>almendra_sc</item>
        <item>asset</item>
        <item>bangers</item>
        <item>bevan</item>
        <item>bungee_outline</item>
        <item>bungee_shades</item>
        <item>creepster</item>
        <item>diplomata</item>
    </string-array>
    <string-array name="Manage_Website">
        <item>Select To Manage</item>
        <item>------------------------------------------------------</item>
        <item>Change Top Scrolling Text Colour</item>
        <item>------------------------------------------------------</item>
        <item>Write Banner Scrolling Description</item>
        <item>Pick Banner Scrolling Color</item>
        <item>Write Banner Title</item>
        <item>Change Banner Title Color</item>
        <item>Write Banner Description</item>
        <item>Change Banner Description Color</item>
        <item>Add Link To Title In Banner Section</item>
        <item>------------------------------------------------------</item>
        <item>Write Post 1 Title Description</item>
        <item>Change Post 1 Title Color</item>
        <item>Change Post 1 Description Color</item>
        <item>------------------------------------------------------</item>
        <item>Write Post 2 Title Description</item>
        <item>Change Post 2 Title Color</item>
        <item>Change Post 2 Description Color</item>
        <item>------------------------------------------------------</item>
        <item>Change About Us Title Colour</item>
        <item>Change About Us Description Colour</item>
        <item>------------------------------------------------------</item>
       <item>Change Contact Us Title Color</item>
        <item>Change Contact Us Description Colour</item>
        <item>------------------------------------------------------</item>
         <item>Change Social Title Colour</item>
        <item>Change Social Section Color</item>
        <item>------------------------------------------------------</item>
        <item>Write New Post Title</item>
       <item>Write New Post  Description</item>
       <item>Pick New Post Layout Color</item>
       <item>Pick New Post Title Color</item>
      <item>Pick New Post Description Color</item>
      <item>Add New Post</item>
        <item>Add Delete Post</item>
        <item>Delete All New Post</item>


    </string-array>

</resources>