<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_web_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_templates"
        android:icon="@drawable/ic_baseline_backup_table_24"
        android:title="@string/menu_templates" />
    <item
        android:id="@+id/nav_colour"
        android:icon="@drawable/ic_baseline_color_lens_24"
        android:title="@string/menu_colour" />
    <item
        android:id="@+id/nav_font"
        android:icon="@drawable/ic_baseline_font_download_24"
        android:title="@string/menu_font" />

    <item
        android:id="@+id/nav_finish"
        android:icon="@drawable/ic_baseline_done_outline_24"
        android:title="@string/menu_finish" />
</menu>