<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page.LoginPage"
    android:background="@drawable/app_start_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:text="@string/LoginPageHeading"
        android:textColor="@color/orange"
        android:textSize="48sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_box_background"
        android:hint="@string/Email_ID"
        android:textColorHint="#E64A19"
        app:endIconDrawable="@drawable/ic_baseline_cancel_24"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_markunread_24"
        app:startIconTint="#030202">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/text_box_background"
            android:includeFontPadding="true"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            android:textColorHighlight="#A9D4A9"
            android:textColorHint="#E64A19"
            android:textSize="12sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/text_box_background"
        android:hint="@string/PasswordloginPage"
        android:textColorHint="#E64A19"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#584135"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="#090606">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_box_background"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHighlight="#388E3C"
            android:textColorHint="#E64A19"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/agree_terms_and_condition"
        android:textColor="#1976D2"
        android:textStyle="italic"
        app:buttonIcon="@android:drawable/checkbox_on_background" />

    <ProgressBar
        android:id="@+id/myprogress"
        android:layout_width="14dp"
        android:layout_height="23dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/gosignup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/Go_to_signup"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/validuser1"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/login_now"
        android:textSize="24sp" />


</LinearLayout>