<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlVar1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvVar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:fontFamily="casual"
        android:gravity="center"
        android:padding="70dp"
        android:text="@string/would_you_like_to_set_background_color_of_your_website"
        android:textColor="#303F9F"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/coloractivityid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_colorize_24"
        android:text="@string/colorOption"
        android:textColor="#000000"
        android:textSize="34sp"
        app:iconGravity="textTop"
        app:layout_constraintEnd_toEndOf="@+id/tvVar1"
        app:layout_constraintStart_toStartOf="@+id/tvVar1"
        app:layout_constraintTop_toBottomOf="@+id/tvVar1" />

    <Button
        android:id="@+id/choosecolorbtnid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#303F9F"
        android:text="@string/next"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/coloractivityid"
        app:layout_constraintStart_toStartOf="@+id/coloractivityid"
        app:layout_constraintTop_toBottomOf="@+id/coloractivityid" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choosecolorbtnid"
        app:srcCompat="@drawable/color_fragment_img" />

</androidx.constraintlayout.widget.ConstraintLayout>
